setting theme_classic

--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -394,9 +394,8 @@ Att_graph1 <- Attendance_nat %>%
   filter(year < 1993) %>% 
   ggplot(aes(x = year, y = Attendance)) +
   geom_line(color="orange", linewidth = 0.75) +
-  scale_y_continuous(labels = scales::number_format())+ 
   labs(title ="Attendance in France by year [1966-1992] - Dynamic graph", x="Year", y="Attendance")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Att_graph1, dynamicTicks = TRUE)
 ```
@@ -416,7 +415,7 @@ Att_graph2 <-Attendance_nat %>%
   scale_fill_manual(values = c("lightblue", "orange")) +
   scale_y_continuous(labels = scales::percent_format(scale = 1)) + 
   labs(title = "Growth rate by year [1967-1992]", x="Year", y="Growth rate by year", fill="Growth rate") +
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Att_graph2)
 ```
@@ -499,9 +498,8 @@ Re_graph1 <- recette_nat %>%
   filter(year < 1993) %>% 
   ggplot(aes(x = year, y = recette_tot)) +
   geom_line(color="skyblue", linewidth = 0.75) +
-  scale_y_continuous(labels = scales::number_format())+ 
   labs(title ="Revenue of movie theater in France by year [1966-1992]", x="Year", y="Totale Revenue")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Re_graph1, dynamicTicks = TRUE)
 
@@ -509,9 +507,8 @@ Re_graph2 <- recette_nat_without_inf %>%
   filter(year < 1993) %>% 
   ggplot(aes(x = year, y = recette_tot)) +
   geom_line(color="skyblue", linewidth = 0.75) +
-  scale_y_continuous(labels = scales::number_format())+ 
   labs(title ="Revenue of movie theater in France by year [1966-1992] (in 2015€)", x="Year", y="Totale Revenue")+
-  theme_minimal()
+    theme_classic()
 
 ggplotly(Re_graph2, dynamicTicks = TRUE)
 ```
@@ -523,11 +520,11 @@ Re_graph3 <- recette_nat_without_inf %>%
   filter(year < 1993) %>% 
   ggplot(aes(x = year, y = rme_nat_without_inflation)) +
   geom_line(color="skyblue", linewidth = 0.75) +
-  scale_y_continuous(labels = scales::number_format())+ 
+  scale_y_continuous(labels = function(x) paste0(scales::comma(x), "€")) +
   labs(title ="Average revenue by ticket sold in France by year [1966-1992] (in 2015€)", x="Year", y="Revenue by Ticket")+
-  theme_minimal()
+  theme_classic()
 
-ggplotly(Re_graph3, dynamicTicks = TRUE)
+ggplotly(Re_graph3)
 ```
 
 <br>
@@ -552,7 +549,7 @@ Se_graph1 <- Equip_nat %>%
   ggplot(aes(x=year, y=Seats)) +
   geom_line(color="red", linewidth = 0.75)+
   labs(title = "Evolution of the number of seats in France by year [1966-1992]", x="Year", y="Number of Seats")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Se_graph1, dynamicTicks = TRUE)
 ```
@@ -583,9 +580,11 @@ Equip_nat <- Equip_nat %>%  mutate(Screens_b100=Screens/Screens[year==1966]*100,
   geom_line(linewidth = 0.75) +
   scale_color_manual(values = c("blue", "red")) +
   labs(title = "Comparaison of the number of seats and screens (base index 100 in 1966)", x="Year", y="Number of seats")+
-  theme_minimal()
+  theme_classic()
 
-ggplotly(Se_Sc_graph1, dynamicTicks = TRUE)
+ggplotly(Se_Sc_graph1, dynamicTicks = TRUE) %>%
+    layout(legend = list(x = 0.2, y = -0.2, orientation = "h"))
+
 ```
 
 <br>
@@ -598,7 +597,7 @@ Se_Sc_graph2 <- Equip_nat %>%
   ggplot(aes(x=year,y=Seats_by_screens))+
   geom_line(color = "turquoise", linewidth = 0.75)+
   labs(title = "Ratio of Seats by Screens in France by year [1966-1992]", x="Year", y="Seats by Screen")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Se_Sc_graph2, dynamicTicks = TRUE)
 ```
@@ -636,9 +635,8 @@ Att_graph3 <- Attendance_nat %>%
   filter(year >1992) %>% 
   ggplot(aes(x = year, y = Attendance)) +
   geom_line(color="orange", linewidth = 0.75) +
-  scale_y_continuous(labels = scales::number_format())+ 
   labs(title ="Attendance in France by year [1993-2022]", x="Year", y="Attendance")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Att_graph3, dynamicTicks = TRUE)
 ```
@@ -654,9 +652,9 @@ Att_graph4 <-Attendance_nat %>%
   scale_fill_manual(values = c("lightblue", "orange")) +
   scale_y_continuous(labels = scales::percent_format(scale = 1)) + 
   labs(title = "Growth rate by year [1993-2019]", x="Year", y="Growth rate by year", fill="Growth rate") +
-  theme_minimal()
+  theme_classic()
 
-ggplotly(Att_graph4, dynamicTicks = TRUE)
+ggplotly(Att_graph4)
 ```
 
 Numerous scientific papers and reports agree that this revival is due to the development of multiplexes (Blanchard, 2014 ; CNC, 2013; Muhlberger, 2013; Thiolliere and Ralite, 2003). Theses structures would have sparked again the interest of the consumers for movie theaters.
@@ -700,9 +698,8 @@ Re_graph4 <- recette_nat_without_inf %>%
   filter(year > 1992) %>% 
   ggplot(aes(x = year, y = recette_tot)) +
   geom_line(color="skyblue", linewidth = 0.75) +
-  scale_y_continuous(labels = scales::number_format())+ 
   labs(title ="Revenue of movie theater in France by year [1993-2022] (in 2015€)", x="Year", y="Totale Revenue")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Re_graph4, dynamicTicks = TRUE)
 ```
@@ -712,11 +709,11 @@ Re_graph5 <- recette_nat_without_inf %>%
   filter(year > 1992) %>% 
   ggplot(aes(x = year, y = rme_nat_without_inflation)) +
   geom_line(color="skyblue", linewidth = 0.75) +
-  scale_y_continuous(labels = scales::number_format())+ 
+    scale_y_continuous(labels = function(x) paste0(scales::comma(x), "€")) +
   labs(title ="Average revenue by ticket sold in France by year [1993-2022] (in 2015€)", x="Year", y="Revenue by Ticket")+
-  theme_minimal()
+  theme_classic()
 
-ggplotly(Re_graph5, dynamicTicks = TRUE)
+ggplotly(Re_graph5)
 ```
 
 NOTE A CEDRIC : tu peux mettre cette partie si tu la trouve mieux placé apres tout ce qui est multiplex et changement du marché
@@ -747,7 +744,7 @@ Etablissement_nat <- cnc_data_clean %>%
   ggplot(aes(x = year, y = nb_multiplex)) +
   geom_line(color = "purple", linewidth = 0.75) + 
   labs(title ="Number of multiplexes in France between 1993 and 2022", x="Year", y="Number of Multiplexes")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(M_graph1, dynamicTicks = TRUE)
 ```
@@ -772,9 +769,12 @@ Et_graph <- Etablissement_nat %>%
   ggplot(aes(x=year,y=Nb, color=Variables)) +
   labs(title = "Number of movie theater in France between 1992 and 2022", x="Year", y="Number of cinemas")+
   geom_line(linewidth = 0.75)+
-  theme_minimal()
+  theme_classic() +
+  theme(legend.position = "bottom")
 
-ggplotly(Et_graph, dynamicTicks = TRUE) 
+
+ggplotly(Et_graph, dynamicTicks = TRUE, tooltip = "text") %>%
+  layout(legend = list(x = 0.1, y = -0.2, orientation = "h"))
   
 #The rename function is used to change (only for the creation of this graphic) the name of the original column which became the values of the column"Variables". The goal behind this transformation is to have more significative name for the two curves in our legend. We also use the layout function to put the legend above the graph because plotly does not take into account theme(legend.position = "top") when it transform the ggplot.
 ```
@@ -790,9 +790,9 @@ M_graph2 <- Etablissement_nat %>%
   geom_line(color="purple", linewidth = 0.75) +
   scale_y_continuous(labels = scales::percent_format(scale = 1))+ 
    labs(title="Share of the multiplexes in the total of movie theater between 1993 and 2022", x="Year", y="Percentage")+
-  theme_minimal()
+  theme_classic() 
 
-ggplotly(M_graph2, dynamicTicks = TRUE)
+ggplotly(M_graph2)
 ```
 
 <br>
@@ -805,7 +805,7 @@ Sc_graph <- Equip_nat %>%
   ggplot(aes(x = year, y = Screens)) +
   geom_line(color = "blue", linewidth = 0.75) +
   labs(title = "Number of Screens in France between 1993 and 2022", x = "Year", y = "Number of Screens") +
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Sc_graph, dynamicTicks = TRUE)
 ```
@@ -841,7 +841,7 @@ Se_graph2 <- Equip_nat %>%
   geom_line(color="red", linewidth = 0.75)+
   geom_vline(xintercept = 1993, linetype = "dotted", color = "black")+
   labs(title = "Number of Seats in France between 1962 and 2022", x="Year", y="Number of Seats")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Se_graph2, dynamicTicks = TRUE)
 
@@ -851,7 +851,7 @@ Se_graph3 <- Equip_nat %>%
   ggplot(aes(x=year, y=Seats)) +
   geom_line(color="red", linewidth = 0.75)+
   labs(title = "Number of Seats in France between 1993 and 2022", x="Year", y="Number of Seats")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Se_graph3, dynamicTicks = TRUE)
 ```
@@ -873,7 +873,7 @@ Seances_graph <- seance_nat %>%
   ggplot(aes(x = year, y = seance_by_etab)) +
   geom_line(color="purple", linewidth = 0.75) +
   labs(title="Number of seances by movie theater between 1993 and 2022", x="Year", y="Seances")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(Seances_graph, dynamicTicks = TRUE)
 ```
@@ -900,7 +900,7 @@ AE_graph1 <- Attendance_AE_nat %>%
   geom_line(color="orange", linewidth = 0.75) +
   scale_y_continuous(labels = scales::number_format())+ 
   labs(title ="Attendance arthouse cinema in France", x="Year", y="Attendance")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(AE_graph1, dynamicTicks = TRUE)
 ```
@@ -916,9 +916,9 @@ AE_graph2 <-Attendance_AE_nat %>%
   scale_fill_manual(values = c("lightblue", "orange")) +
   scale_y_continuous(labels = scales::percent_format(scale = 1)) + 
   labs(title = "Growth rate by year [2002-2019]", x="Year", y="Growth rate", fill="Growth rate") +
-  theme_minimal()
+  theme_classic()
 
-ggplotly(AE_graph2, dynamicTicks = TRUE)
+ggplotly(AE_graph2)
 ```
 
 ```{r}
@@ -926,7 +926,7 @@ AE_graph3 <-  recette_AE_nat %>%
   ggplot(aes(x = year, y = recetteAE_tot)) +
   geom_line(color = "skyblue", linewidth = 0.75) + 
   labs(titre="Totale revenue arthouse cinema in France", x="Year", y="Totale Revenue")+
-  theme_minimal()
+  theme_classic()
 
 ggplotly(AE_graph3, dynamicTicks = TRUE)
 ```
@@ -945,7 +945,7 @@ AE_graph4 <-  Etablissement_AE %>%
   ggplot(aes(x = year, y = part_AE)) +
   geom_line(color = "purple", linewidth = 0.75) + 
   labs(titre="Number of arthouse cinema in France", x="Year", y="Number of arthouse cinema")+
-  theme_minimal()
+  theme_classicws()
 
 ggplotly(AE_graph4, dynamicTicks = TRUE)
 ```
@@ -990,7 +990,7 @@ merged_data <- merge(france_shape, pop_dep, by = "departement_code")
 ggplot(merged_data, aes(fill = per_pop_dep_change)) +
   geom_sf() +
   scale_fill_viridis_c(option = "C") + 
-  labs(title = "Population Map of France", fill = "Evolution of the relative concentration of the population by department") +
+  labs(title = "Evolution of the relative concentration of the population by department in France ", fill = "Evolution of the relative concentration of the population by department") +
   theme_classic() +
   annotation_scale()+
   annotation_north_arrow(style = north_arrow_nautical, location = "tr", which_north = "true")+
@@ -1033,7 +1033,7 @@ merged_data <- merge(france_shape, seats_dep, by = "departement_code")
 ggplot(merged_data, aes(fill = per_seats_dep_change)) +
   geom_sf() +
   scale_fill_viridis_c(option = "C") + 
-  labs(title = "Population Map of France", fill = "Evolution of the relative concentration of the offer of seats by department") +
+  labs(title = "Evolution of the relative concentration of the offer of seats by department in France", fill = "Evolution of the relative concentration of the offer of seats by department") +
   theme_classic() +
   annotation_scale()+
   annotation_north_arrow(style = north_arrow_nautical, location = "tr", which_north = "true")+
