--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -454,6 +454,7 @@ ggplot(merged_data, aes(fill = attendance_evolution)) +
   theme(legend.position = "bottom",
         legend.title = element_text(hjust = 0.5))
 ```
+
 Here we can have a look of the decline of attendance by department, we see that almost none of department are spare at the end.
 
 ```{r Statistics_on_recettes}
@@ -1448,7 +1449,7 @@ Econ_data_v4 <- left_join(Econ_data_v4, NR_60_and_more, by = c("year", "departem
 Remaning_variables <- Econ_data_v3 %>%
   select(departement_code, year, Retirees_wu, entrées, Unemployed)
 
-Econ_data_v4 <- left_join(Econ_data_v4, Retirees, by = c("year", "departement_code"))
+Econ_data_v4 <- left_join(Econ_data_v4, Remaning_variables, by = c("year", "departement_code"))
 
 ```
 
@@ -1537,7 +1538,6 @@ f_eff_time_AGE_CSP <- plm(model_for_AG_CSP, data=Econ_data_AG_CSP, index=c("depa
 summary(f_eff_time_AGE_CSP)
 ```
 
-
 ## Potential final procedure
 
 The relationship between the sociodemographic characteristics of departments and the evolution of movie theaters' attendance can be tricky to analyze through the unique use of graphics. On one hand, because the variables in the dataset can be affected by complex interactions, relying solely on graphics can lead to spurious conclusions. On the other hand, graphics also have strong limitations when the number of variables of interest increases. That’s why econometric models can be useful to delve into a thorough analysis of the link between variables. This section is dedicated to employing econometric methodologies to find answers that address our research question. Specifically, we will attempt to understand which sociodemographic characteristics had a positive or negative influence on the heterogeneous evolution of attendance in French departments. To do so, we will employ a panel data econometric model that utilizes both the cross-sectional and longitudinal characteristics of our dataset.
@@ -1570,7 +1570,6 @@ Présenter les modèles calculées : possible de les écrire mathématiquement a
 
 ```
 
-
 #### Choice of the type of model
 
 We only employed basics techniques for econometric analysis of panel data. Three simple and standards models are often used for panel data :
@@ -1595,7 +1594,7 @@ f_eff_2 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees +
 pFtest(f_eff_2, ols_2)
 ```
 
-The Hassman test continue our analysis by discerning the most suitable model between the fixed-effect and the random model. The p-value being below the significance level of 0.05, the fixed effect model is favored.
+The Haussman test continue our analysis by discerning the most suitable model between the fixed-effect and the random model. The p-value being below the significance level of 0.05, the fixed effect model is favored.
 
 ```{r Test_between_fixed_and_random_effect}
 #Random effect model
@@ -1609,36 +1608,9 @@ phtest(f_eff_2, r_eff_2)
 
 #### Test for time-fixed effect and individual effect
 
-Having selected the fixed effect model, the next step was to identify if the addition of individual or time-fixed effects improve the model's quality.
+Having selected the fixed effect model, the next step was to identify if the addition time-fixed effects improve the model's quality.
 
-We applied TORRES-REYNA (2010)'s method, which consist on adding dummy variables to craft models with these effect. On R, an alternative method exists. It consists of using the **effect** argument of the **plm** package with code such as ' **effect ="time"** 'or **effect = "individual"** '(Wagle, 2021; Croissant et al., 2023; Hanck et al., 2023). However, we had to abandon its usage betcause it gave us results that seems incoherent. Indeed, they provided us coefficient that seems excessively large.
-
-With a p value below 0.05, the Brehsch-Pagan test support the hypothesis of using time-fixed effect. However, the Honda test rejects it. Despite different coefficients, we decided to use time–fixed effects. Indeed, while testing the function with and without the **effect** argument, we remarked that despite having different coefficient, the two techniques found the same significant variables and also tend to support the use of the time-fixed effects. Therefore, the different indices seeming to favor the use of these effects, we used as hypothesis that time-fixed effects contribute to a better specification of the model.
-
-```{r}
-f_eff_time_2<-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(year), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
-plmtest(f_eff_time_2, effect="time", type="bp")
-plmtest(f_eff_time_2, effect="time", type="honda")
-
-```
-
-The Lagrange multiplier test support the simultaneous utilization of individual effects.
-
-```{r}
-f_eff_ind_2<-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(departement_code), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
-plmtest(f_eff_time_2, effect="individual", type="bp")
-plmtest(f_eff_time_2, effect="individual", type="honda")
-```
-
-We then used a two-way model combining time-fixed and individual effects.
-
-```{r}
-f_eff_2ways_2 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(year) + factor(departement_code), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
-```
-
-As we said before, it can be noted that while it gave us different coefficients, the utilization of the **effect** argument arrived at the same conclusion regarding the use of a two-way model :
-
-*Test for time-fixed effect*
+With p-values below 0.05, both Breusch-Pagan and Honda tests support the introduction of fixed effect.
 
 ```{r}
 #Model with time-fixed effects.
@@ -1648,18 +1620,16 @@ f_eff_time_2_2<-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employ
 plmtest(f_eff_time_2_2, effect="time", type="bp")
 plmtest(f_eff_time_2_2, effect="time", type="honda")
 
+
 ```
 
-*Test for individual effect*
+We then used a two-ways model combining time-fixed and individual effects.
 
 ```{r}
-#Model with individual effects
-f_eff_ind_2_2<-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2, index=c("departement_code", "year"), model="within", effect = "individual")
-
-# PLM test
-plmtest(f_eff_ind_2_2, effect="individual", type="bp")
-plmtest(f_eff_time_2_2, effect="individual", type="honda")
+f_eff_2ways_2 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(year) + factor(departement_code), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
 ```
+
+<br>
 
 #### Test for unit roots
 
@@ -1671,9 +1641,11 @@ Panel.set<- pdata.frame(Econ_data_v2, index = c("departement_code", "year"))
 adf.test(Econ_data_v2$entrées, k=2)adf.test(Econ_data_v2$entrées, k=2)
 ```
 
+<br>
+
 #### Test for serial correlation
 
-Our model also suffer from serial correlation. Indeed, Breusch-Godfrey/Wooldridge test has a p-value below the significance level. Both, Altaf and Torres-Reyna propose the same method to address cross-sectional dependence the use of Arellano's technique as we will see in the next paragraph.
+However, our panel data encounter several issues. Firstlyn our model also suffer from serial correlation. The Breusch-Godfrey/Wooldridge indicate a p-value below the significance level of 0.05. To correct this issue, both Altaf and Torres-Reyna propose t the use of Arellano's technique as we will see in the next paragraph.
 
 ```{r Test_for_serial_correlation}
 pbgtest(f_eff_2ways_2)
@@ -1681,17 +1653,17 @@ pbgtest(f_eff_2ways_2)
 
 #### Test of Heterosedasticity
 
-With a p-value below 0.05, our model encounter heteroscedasticity.
+The second challenge of our ecometrics analysis was the presence of heteroscedasticity in the model.
 
 ```{r #Test_for_heteroscedasticity}
 bptest(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data = Econ_data_v2, studentize=F)
 ```
 
-Nevertheless, the use of the **vcovHC** function from the **sandwich** package computes heteroskedasticity-consistent covariance estimators using White and Arellano method (White 1980, 1984; Arellano 1987). Moreover, this function can be used to correct simultaneously both heteroskedasticity and serial correlation with the code ' **method = "arellano"** '.
+Nevertheless, heteroscedasticity if a common issue in ecometric analysis and solutions has been presented to tackle it. The use of the **vcovHC** function from the **sandwich** package computes heteroskedasticity-consistent covariance estimators using White and Arellano method (White 1980, 1984; Arellano, 1987). Moreover, this function can be used to correct simultaneously both heteroskedasticity and serial correlation with ' **method = "arellano"** '.
 
 #### Test for cross-sectional dependence
 
-A final issue is common with panel data, and ours is no exception. This issue is the cross-sectional dependance. As we can see on the Breusch-Pagan and Pesaran tests below, our model suffers of this issue. The utilisation of Beck and Katz method is proposed by Altaf as a solution to tackle this issue. To use this method, we will forego the utilisation of the **vcovHC** function but do a similar work with the **vcovBK** one, which also tackles cross-sectional dependence
+A final issue was the presence of cross-sectional dependance as we can see on the Breusch-Pagan and Pesaran tests below.
 
 ```{r Test_for_cross_sectional_dependence}
 #Breusch-Pagan LM test for cross-sectional dependence
@@ -1701,13 +1673,22 @@ pcdtest(f_eff_2, test = c("lm"))
 pcdtest(f_eff_2, test = c("cd"))
 ```
 
-### Outcome
+The utilization of Beck and Katz method is proposed by Altaf as a solution to tackle this issue. To use this method, we will forego the utilization of the **vcovHC** function but do a similar work with the **vcovBK** one, which also enable to correct cross-sectional dependence.
+
+### Discussion
+
+```{r Results_before_correction}
+summary(f_eff_2ways_2)
+```
 
 ```{r Coefficient_with_correction_of_the_different_issues}
 coeftest(f_eff_2ways_2, vcov = vcovBK(f_eff_2ways_2, method = "arellano", cluster = "group"))
 ```
+
 <br>
+
 #### Multicolinearity analysis
+
 ```{r}
 
 
@@ -1745,21 +1726,20 @@ mvif_6 <- plm(model_for_AG_CSP_vif, data=Econ_data_AG_CSP, index=c("departement_
 vif(mvif_6)
 
 ```
+
 <br>
 
-
 ### Bayesan Information Criterion
-The selection of the final were performed using the Bayesian Information Criterion. We used the formula used in Yum's paper (2021) on his analysis of is an AIC for model selection for panel data models with fixed effect :  : 
-$$
-BIC = N \times T \times \log(\sigma^2) + K \times \log(N \times T) 
-$$
-With $ \sigma = \frac{SSR}{N \times T}$
 
-<br> 
+The selection of the final were performed using the Bayesian Information Criterion. We used the formula used in Yum's paper (2021) on his analysis of is an AIC for model selection for panel data models with fixed effect : $$
+BIC = N \times T \times \log(\sigma^2) + K \times \log(N \times T) 
+$$ With \$ \sigma = \frac{SSR}{N \times T}\$
+
+<br>
+
 ```{r}
 f_eff_2ways_2 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(year) + factor(departement_code), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
 ```
-
 
 ```{r BIC_Calculation}
 # SSR
@@ -1820,7 +1800,9 @@ chosen_breaks <- c(-Inf, -50, -25, 0, 25, 50, Inf)
 
 # References
 
-**BLANCHARD Jean-Philippe, 2014.** " Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l'ethnicité sur grand écran ". *Migrations Société*, 151, 153-164. <https://doi.org/10.3917/migra.151.0153>
+**BLANCHARD Jean-Philippe, 2014.** " Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l'ethnicité sur grand écran ". *Migrations Société*, 151, 153-164.
+
+DOI : <https://doi.org/10.3917/migra.151.0153>
 
 <br>
 
@@ -1921,3 +1903,9 @@ URL: <https://www.senat.fr/rap/r02-308/r02-308_mono.html#toc5>
 **WAGLE Manil, 2021.** *How to deal with Panel Data - Practical Application using R.* Medium.com
 
 URL : [https://medium.com/\@manilwagle/how-to-deal-with-panel-data-practical-application-using-r-18ef95ae99c6](https://medium.com/@manilwagle/how-to-deal-with-panel-data-practical-application-using-r-18ef95ae99c6)
+
+<br>
+
+**YUM** **Minchul , 2022.** Model selection for panel data models with fixed effects: a simulation study, *Applied Economics Letters*, 29:19, p. 1776-1783
+
+DOI: [10.1080/13504851.2021.1962505](https://doi.org/10.1080/13504851.2021.1962505)
